dapr-distributed-calendar/locust/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: locust-ingress
  namespace: 12-factor-app
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /locust
            backend:
              service:
                name: locust
                port:
                  number: 8089
